<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2021 Michael McKey (michaelmckey123@protonmail.com)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/button_off"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/capital_off"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_timer"
        app:layout_constraintTop_toTopOf="@+id/button_timer" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_1_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintStart_toStartOf="@+id/button_power"
        app:layout_constraintTop_toBottomOf="@+id/button_power" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_2_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_1"
        app:layout_constraintEnd_toEndOf="@+id/button_off"
        app:layout_constraintTop_toTopOf="@+id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_3_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_4_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_3" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_5_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"

        android:text="@string/button_6_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button_4"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_7_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_brightness_down"
        app:layout_constraintStart_toStartOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:text="@string/button_8_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_7"
        app:layout_constraintEnd_toEndOf="@+id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_7" />

    <ImageButton
        android:id="@+id/button_brightness_up"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:contentDescription="@string/button_brightness_up_text"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/button_brightness_down"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_brightness_down"
        app:srcCompat="@drawable/button_icon_light_mode" />

    <ImageButton
        android:id="@+id/button_brightness_down"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:contentDescription="@string/button_brightness_down_text"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        app:srcCompat="@drawable/button_icon_dark_mode" />

    <ImageButton
        android:id="@+id/button_power"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:contentDescription="@string/button_power_text"
        android:scaleType="fitCenter"
        android:text="@string/button_power_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_timer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_icon_power" />

    <ImageButton
        android:id="@+id/button_timer"
        android:layout_width="@dimen/light_layout_button_size"
        android:layout_height="@dimen/light_layout_button_size"
        android:contentDescription="@string/button_timer_text"
        android:scaleType="fitCenter"
        android:text="@string/button_mute_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_power"
        app:layout_constraintEnd_toStartOf="@+id/button_off"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_power"
        app:layout_constraintTop_toTopOf="@+id/button_power"
        app:srcCompat="@drawable/button_icon_timer" />

</androidx.constraintlayout.widget.ConstraintLayout>