<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2021 Michael McKey (michaelmckey123@protonmail.com)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/content_padding_normal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="@dimen/sort_by_label_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RadioGroup
        android:id="@+id/sort_by_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/title_radio_button">

        <RadioButton
            android:id="@+id/title_radio_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/title"
            android:textSize="@dimen/sort_by_radio_button_text_size" />

        <RadioButton
            android:id="@+id/contents_radio_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/contents"
            android:textSize="@dimen/sort_by_radio_button_text_size" />

        <RadioButton
            android:id="@+id/time_radio_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/time"
            android:textSize="@dimen/sort_by_radio_button_text_size" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_textView_text"
        android:textSize="@dimen/sort_by_label_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RadioGroup
        android:id="@+id/order_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/ascending_radio_button">

        <RadioButton
            android:id="@+id/ascending_radio_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/ascending_radio_button_text"
            android:textSize="@dimen/sort_by_radio_button_text_size" />

        <RadioButton
            android:id="@+id/descending_radio_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/radio_button_height"
            android:text="@string/descending_radio_button_text"
            android:textSize="@dimen/sort_by_radio_button_text_size" />

    </RadioGroup>
</LinearLayout>