<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2021 Michael McKey (michaelmckey123@protonmail.com)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:hapticFeedbackEnabled="true"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/button_power"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginTop="@dimen/medium_layout_margin"
        android:layout_marginBottom="@dimen/medium_layout_margin"
        android:contentDescription="@string/button_power_text"
        android:scaleType="fitCenter"
        android:text="@string/button_power_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toTopOf="@+id/button_up"
        app:layout_constraintEnd_toEndOf="@+id/button_left"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_left"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_icon_power" />

    <ImageButton
        android:id="@+id/button_mute"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:contentDescription="@string/button_mute_text"
        android:scaleType="fitCenter"
        android:text="@string/button_mute_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_power"
        app:layout_constraintEnd_toEndOf="@+id/button_right"
        app:layout_constraintStart_toStartOf="@+id/button_right"
        app:layout_constraintTop_toTopOf="@+id/button_power"
        app:srcCompat="@drawable/button_icon_mute" />

    <ImageButton
        android:id="@+id/button_up"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:contentDescription="@string/button_up_text"
        android:scaleType="fitCenter"
        android:text="@string/button_up_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_power"
        app:srcCompat="@drawable/button_icon_up" />

    <ImageButton
        android:id="@+id/button_left"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/button_right_text"
        android:scaleType="fitCenter"
        android:text="@string/button_left_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_ok"
        app:layout_constraintEnd_toStartOf="@+id/button_ok"
        app:layout_constraintTop_toTopOf="@+id/button_ok"
        app:srcCompat="@drawable/button_icon_left" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:text="@android:string/ok"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_up" />

    <ImageButton
        android:id="@+id/button_right"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/button_right_text"
        android:scaleType="fitCenter"
        android:text="@string/button_right_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_ok"
        app:layout_constraintStart_toEndOf="@+id/button_ok"
        app:layout_constraintTop_toTopOf="@+id/button_ok"
        app:srcCompat="@drawable/button_icon_right" />

    <ImageButton
        android:id="@+id/button_down"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginBottom="@dimen/medium_layout_margin"
        android:contentDescription="@string/button_down_text"
        android:scaleType="fitCenter"
        android:text="@string/button_down_text"
        android:textSize="@dimen/keypad_font_size"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ok"
        app:srcCompat="@drawable/button_icon_down" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginEnd="8dp"
        android:text="@string/button_1_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:text="@string/button_2_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_down" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginStart="8dp"
        android:text="@string/button_3_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginEnd="8dp"
        android:text="@string/button_4_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:text="@string/button_5_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"

        android:layout_marginStart="8dp"
        android:text="@string/button_6_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginEnd="8dp"
        android:text="@string/button_7_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:text="@string/button_8_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginStart="8dp"
        android:text="@string/button_9_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="@dimen/medium_layout_button_size"
        android:layout_height="@dimen/medium_layout_button_size"
        android:layout_marginTop="@dimen/medium_layout_margin"
        android:layout_marginBottom="24dp"
        android:text="@string/button_0_text"
        android:textSize="@dimen/medium_layout_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

</androidx.constraintlayout.widget.ConstraintLayout>