<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/side_padding_nav_header"
    android:paddingTop="@dimen/top_padding_nav_header"
    android:paddingRight="@dimen/side_padding_nav_header"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/author_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/code_editor_item_height"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="@dimen/author_name_text_size" />

    <TextView
        android:id="@+id/author_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_header_item_height"
        android:text="@string/nav_header_subtitle"
        android:textIsSelectable="true"
        android:textSize="@dimen/author_email_text_size" />
</LinearLayout>